# iWISDM

./: .gitignore  CCNGRU.py  CompareCtg_task.py  LICENSE  README.md  adapated_xiaoxuan-Copy1.ipynb  adapated_xiaoxuan.ipynb  api2nn.py  barebones.ipynb  comp_loc_task_.json  count_random_tasks.py  dataset_builder.py  dataset_gen.ipynb  environment.yml  individualTaskGen.ipynb  individual_task_gen.ipynb  main.py  nback_task.py  nn_playground.ipynb  pyproject.toml  randomTaskGen.ipynb  random_dataset_gen.ipynb  random_task.py  random_task_gen.ipynb  requirements.txt  scratch.ipynb  stimuli_mod.ipynb  task_dataset_gen.ipynb  test.ipynb  testing copy.ipynb  testing.ipynb  trainer_pipeline.py  xiaoxuan_rnn.ipynb
.ipynb_checkpoints/: adapated_xiaoxuan-Copy1-checkpoint.ipynb  adapated_xiaoxuan-checkpoint.ipynb  nn_playground-checkpoint.ipynb  xiaoxuan_rnn-checkpoint.ipynb
benchmarking/: README.md  create_bench.py
cognitive/: arguments.py  auto_task_util.py  constants.py  helper.py  info_generator.py  info_generator_test.py  stim_generator.py  stim_generator_test.py  task_bank.py  task_generator.py  task_generator_test.py
iwisdm/: __init__.py  core.py
scripts/: plot_dict.py
test/: auto_task_util_test.py  embedding_analysis.ipynb  info_generator_test.py  random_task_composition.py  stim_generator_test.py  stimuli_mod.ipynb  task_generator_test.py  test_env.py
test_test/: compo_task_example  memory_trace_info  task0 example
tutorials/: README.md  adding_distractors.ipynb  barebones_testing.ipynb  individual_task_gen.ipynb  nn_playground.ipynb  random_dataset_gen.ipynb  (+3 more)
(+132 files in other folders)
