[tool.poetry]
name = "iwisdm"
version = "0.1.0"
description = "Repository for iWISDM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
networkx = "^3.2.1"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
natsort = "^8.4.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
