[tool.poetry]
name = "iwisdm"
version = "0.1.1.3"
description = "A virtual environment that generates vision-language tasks with varying complexity."
authors = [
    "Xiaoxuan Lei <xiaoxuan.lei@mail.mcgill.ca>",
    "Lucas Gomez <lucas.gomez@mail.mcgill.ca>",
    "Hao Yuan Bai <hao.bai@mail.mcgill.ca>",
    "Pouya Bashivan <pouya.bashivan@mcgill.ca>"
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
networkx = "^3.2.1"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
natsort = "^8.4.0"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"